--- a/exo2/templates/base.html.twig
+++ b/exo2/templates/base.html.twig
@@ -1,12 +1,63 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        <!-- Required meta tags -->
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+		<!-- Added meta tags -->
+		<meta name="copyright" content="Xavier gingaud">
+        <title>{% block title %}Site d'annonces immobilière{% endblock %}</title>
+        {% block stylesheets %}
+			<!-- Font Awesome -->
+			<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+			<!-- Bootstrap core CSS -->
+			<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+			<!-- Material Design Bootstrap -->
+			<link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.7.6/css/mdb.min.css" rel="stylesheet">
+			<!-- JQuery UI -->
+			<link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.css" rel="stylesheet">
+		{% endblock %}
     </head>
     <body>
+    	<nav class="navbar navbar-expand-lg navbar-dark black">
+			<a class="navbar-brand" href="{{ path('accueil') }}">Agence Immobilière Symfony</a>
+
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+
+			<div class="collapse navbar-collapse" id="navbarText">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item active">
+						<a class="nav-link" href="/">Accueil</span></a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{{ path('user_index') }}">Utilisateurs</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{{ path('bien_index') }}">Biens</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{{ path('app_login') }}">Connection</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
+
+		<div class="container">
         {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+    	</div>
+
+        {% block javascripts %}
+			<!-- JQuery -->
+			<script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+			<!-- JQuery UI -->
+			<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js" integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30=" crossorigin="anonymous"></script>
+			<!-- Bootstrap tooltips -->
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
+			<!-- Bootstrap core JavaScript -->
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+			<!-- MDB core JavaScript -->
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.7.6/js/mdb.min.js"></script>
+		{% endblock %}
     </body>
 </html>
