--- a/exo2/templates/base.html.twig
+++ b/exo2/templates/base.html.twig
@@ -36,9 +36,21 @@
 					<li class="nav-item">
 						<a class="nav-link" href="{{ path('bien_index') }}">Biens</a>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="{{ path('app_login') }}">Connection</a>
-					</li>
+
+					{% if is_granted('IS_AUTHENTICATED_FULLY') %}
+
+						<li class="nav-item">
+							<a class="nav-link" href="{{ path('app_logout') }}">Déconnection</a>
+						</li>
+					{% else %}
+						<li class="nav-item">
+							<a class="nav-link" href="{{ path('app_login') }}">Connection</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="{{ path('app_register') }}">S'enregistrer</a>
+						</li>
+					{% endif %}
+
 				</ul>
 			</div>
 		</nav>
