--- a/exo2/templates/user/index.html.twig
+++ b/exo2/templates/user/index.html.twig
@@ -12,7 +12,9 @@
                 <th>Email</th>
                 <th>Roles</th>
                 <th>Password</th>
-                <th>actions</th>
+                {% if is_granted('ROLE_ADMIN') %}
+                    <th>actions</th>
+                {% endif %}
             </tr>
         </thead>
         <tbody>
@@ -22,18 +24,22 @@
                 <td>{{ user.email }}</td>
                 <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
                 <td>{{ user.password }}</td>
-                <td>
-                    <a href="{{ path('user_show', {'id': user.id}) }}">show</a>
-                    <a href="{{ path('user_edit', {'id': user.id}) }}">edit</a>
-                </td>
+                {% if is_granted('ROLE_ADMIN') %}
+                    <td>
+                        {{ include('user/_delete_form.html.twig') }}
+                    </td>
+                {% endif %}
             </tr>
         {% else %}
             <tr>
-                <td colspan="5">no records found</td>
+                {% if is_granted('ROLE_ADMIN') %}
+                    <td colspan="5">no records found</td>
+                {% else %}
+                    <td colspan="4">no records found</td>
+                {% endif %}
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-    <a href="{{ path('user_new') }}">Create new</a>
 {% endblock %}
