--- a/exo2remake/templates/base.html.twig
+++ b/exo2remake/templates/base.html.twig
@@ -21,7 +21,7 @@
     </head>
     <body>
     	<nav class="navbar navbar-expand-lg navbar-dark black">
-			<a class="navbar-brand" href="{{ path('accueil') }}">Agence Immobilière Symfony</a>
+			<a class="navbar-brand" href="{{ path('home') }}">Agence Immobilière Symfony</a>
 
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
 
@@ -32,7 +32,7 @@
 					</li>
 					{% if is_granted('ROLE_SUPER_ADMIN') %}
 						<li class="nav-item">
-							<a class="nav-link" href="{{ path('user_index') }}">Utilisateurs</a>
+							<a class="nav-link" href="#">Utilisateurs</a>
 						</li>
 					{% endif %}
 					<li class="nav-item">
@@ -41,17 +41,17 @@
 
 					{% if is_granted('IS_AUTHENTICATED_FULLY') %}
 						<li class="nav-item">
-							<a class="nav-link" href="#">Profil</a>
+							<a class="nav-link" href="{{ path('fos_user_profile_show') }}">Profil</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="{{ path('app_logout') }}">Déconnection</a>
+							<a class="nav-link" href="{{ path('fos_user_security_logout') }}">Déconnection</a>
 						</li>
 					{% else %}
 						<li class="nav-item">
-							<a class="nav-link" href="{{ path('app_login') }}">Connection</a>
+							<a class="nav-link" href="{{ path('fos_user_security_login') }}">Connection</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="{{ path('app_register') }}">S'enregistrer</a>
+							<a class="nav-link" href="{{ path('fos_user_registration_register') }}">S'enregistrer</a>
 						</li>
 					{% endif %}
 
