--- a/exo2remake/templates/bien/index.html.twig
+++ b/exo2remake/templates/bien/index.html.twig
@@ -3,41 +3,22 @@
 {% block title %}Bien index{% endblock %}
 
 {% block body %}
-    <h1>Bien index</h1>
+    <h1 class="mt-5 mb-2">Liste des bien</h1>
+        
+    {% for bien in biens %}
+        <div class="col-4">
+            <h3>{{ bien.title }}</h3>
+            <p><img src="{{ bien.image }}" alt="placholder"></p>
+            <p>{{ bien.description }}</p>
+            <p>{{ bien.price }}.00€<br>{{ bien.category }}</p>
+            <p>
+                <a href="{{ path('bien_show', {'id': bien.id}) }}"><button class="btn btn-primary">En savoir plus</button></a>
+            </p>
+        </div>
+    {% else %}
+        <div>
+            <p colspan="7">Aucun bien n'est encore en ligne !</p>
+        </div>
+    {% endfor %}
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Title</th>
-                <th>Description</th>
-                <th>Price</th>
-                <th>Category</th>
-                <th>Image</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for bien in biens %}
-            <tr>
-                <td>{{ bien.id }}</td>
-                <td>{{ bien.title }}</td>
-                <td>{{ bien.description }}</td>
-                <td>{{ bien.price }}</td>
-                <td>{{ bien.category }}</td>
-                <td>{{ bien.image }}</td>
-                <td>
-                    <a href="{{ path('bien_show', {'id': bien.id}) }}">show</a>
-                    <a href="{{ path('bien_edit', {'id': bien.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="7">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
-    <a href="{{ path('bien_new') }}">Create new</a>
 {% endblock %}
