--- a/exo2remake/templates/bien/new.html.twig
+++ b/exo2remake/templates/bien/new.html.twig
@@ -3,9 +3,9 @@
 {% block title %}New Bien{% endblock %}
 
 {% block body %}
-    <h1>Create new Bien</h1>
+    <h1 class="mt-5">Ajouter un Bien</h1>
 
     {{ include('bien/_form.html.twig') }}
 
-    <a href="{{ path('bien_index') }}">back to list</a>
+    <a href="{{ path('bien_index') }}">Retour à la liste de vos biens</a>
 {% endblock %}
