--- a/exo2remake/templates/bien/show.html.twig
+++ b/exo2remake/templates/bien/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Bien{% endblock %}
+{% block title %}{{ bien.title }}{% endblock %}
 
 {% block body %}
     <h1 class="mt-5">{{ bien.title }}</h1>
