--- a/exo2remake/templates/bien/_delete_form.html.twig
+++ b/exo2remake/templates/bien/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('bien_delete', {'id': bien.id}) }}" onsubmit="return confirm('Voulez-vous vraiment supprimer ce bien ?');">
+<form method="post" action="{{ path('bien_delete', {'id': bien.id}) }}" onsubmit="return confirm('Voulez-vous vraiment supprimer ce bien ?');" class="mx-auto">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ bien.id) }}">
     <button class="btn btn-danger">Supprimer</button>
