--- a/exo2remake/templates/bien/_form.html.twig
+++ b/exo2remake/templates/bien/_form.html.twig
@@ -1,4 +1,5 @@
 {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Ajouter') }}</button>
+    <div class="d-flex justify-content-between">
+    <button class="btn btn-secondary">{{ button_label|default('Ajouter') }}</button>
 {{ form_end(form) }}
