--- a/exo2remake/templates/bien/edit.html.twig
+++ b/exo2remake/templates/bien/edit.html.twig
@@ -5,9 +5,10 @@
 {% block body %}
     <h1>Edit Bien</h1>
 
-    {{ include('bien/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('bien_index') }}">back to list</a>
+    {{ include('bien/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
 
     {{ include('bien/_delete_form.html.twig') }}
+    <a class="btn" href="{{ path('bien_index') }}">Retour à la liste de vos biens</a>
+
+</div>
 {% endblock %}
