--- a/exo2remake/templates/bien/new.html.twig
+++ b/exo2remake/templates/bien/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('bien/_form.html.twig') }}
 
-    <a href="{{ path('bien_index') }}">Retour à la liste de vos biens</a>
+    <a class="btn" href="{{ path('bien_index') }}">Retour à la liste de vos biens</a>
 {% endblock %}
