--- a/exo2remake/templates/bundles/FOSUserBundle/Resetting/check_email.html.twig
+++ b/exo2remake/templates/bundles/FOSUserBundle/Resetting/check_email.html.twig
@@ -3,7 +3,7 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
 {% block fos_user_content %}
-<p>
+<p class="mt-5">
 {{ 'resetting.check_email'|trans({'%tokenLifetime%': tokenLifetime})|nl2br }}
 </p>
 {% endblock %}
