--- a/exo2remake/templates/home/index.html.twig
+++ b/exo2remake/templates/home/index.html.twig
@@ -3,28 +3,30 @@
 {% block title %}Accueil{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
 <div class="example-wrapper">
     <h1 class="my-3">Bienvenue sur le site d'annonces immobilière !</h1>
     <h2 class="mb-3">Liste des Biens</h2>
-    {% for bien in biens %}
-        <div class="col-4">
-            <h3>{{ bien.title }}</h3>
-            <img src="{{ bien.image }}" alt="placholder" class="img img-fluid">
-            <p>{{ bien.description }}</p>
-            <p>{{ bien.price }}.00€<br>{{ bien.category }}</p>
-            <p>
-                <a href="{{ path('bien_show', {'id': bien.id}) }}"><button class="btn btn-primary">En savoir plus</button></a>
-            </p>
-        </div>
-    {% else %}
-        <div>
-            <p colspan="7">Aucun bien n'est encore en ligne !</p>
-        </div>
-    {% endfor %}
+    <div class="d-flex flex-wrap">
+        {% for bien in biens %}
+            <div class="col-4 my-3">
+                <h3>{{ bien.title }}</h3>
+                <img src="{{ bien.image }}" alt="placholder" class="img img-fluid">
+                <p>{{ bien.description }}</p>
+                <p>{{ bien.price }}.00€<br>{{ bien.category }}</p>
+                <p>
+                    <a href="{{ path('bien_show', {'id': bien.id}) }}"><button class="btn btn-primary">En savoir plus</button></a>
+                </p>
+            </div>
+        {% else %}
+            <div>
+                <p colspan="7">Aucun bien n'est encore en ligne !</p>
+            </div>
+        {% endfor %}
+    </div>
+
+    <div class="navigation w-25 mx-auto">
+        {{ knp_pagination_render(biens) }}
+    </div>
 </div>
 {% endblock %}
